# https-dns

./: Cargo.toml  README.md
.github/workflows/: check-test-lint.yml  rust.yml
benches/: cache.rs
src/: bootstrap.rs  cache.rs  cli.rs  error.rs  lib.rs  local.rs  main.rs  upstream.rs  utils.rs
tests/: a_record.rs  aaaa_record.rs  txt_record.rs
