[package]
name = "https-dns"
description = "Minimal and efficient DNS-over-HTTPS (DoH) client"
version = "0.1.1"
edition = "2021"
authors = ["Xiaoyang Liu <siujoeng.lau@gmail.com>"]
readme = "README.md"
repository = "https://github.com/xiaoyang-sde/https-dns"
homepage = "https://github.com/xiaoyang-sde/https-dns"
documentation = "https://docs.rs/https-dns"
license = "MIT"
keywords = ["cli", "dns"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.18.2", features = ["rt", "net", "sync", "macros", "io-util"] }
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json", "gzip", "brotli"] }
http = "0.2.6"
lru = "0.7.3"
trust-dns-proto = "0.21.2"
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
log = "0.4.17"
